// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuildInformation when build info exists renders correctly 1`] = `
<div>
  <div
    class="root"
    data-testid="build-info"
  >
    Build Name: 
    test-build
    <br />
    Build Number: 
    1234567890
    <br />
    Build Date: 
    2020-01-01T00:00:00.000Z
    <br />
    Build Apt Repo: 
    test-build-repo
    <br />
    Final Apt Repo: 
    final-test-build-repo
  </div>
</div>
`;

exports[`BuildInformation when build info exists when final repo is "sirius" renders correctly 1`] = `
<div>
  <div
    class="root"
    data-testid="build-info"
  >
    pi-topOS Build Number: 
    1234567890
    <br />
    Release Date: 
    2020-01-01T00:00:00.000Z
  </div>
</div>
`;
